add transitions to each section of the site, minor stylistic changes

--- a/index.html
+++ b/index.html
@@ -10,35 +10,43 @@
 </head>
 
 <body>
-    <section id="homepage-header">
-        <h1>My CS 130 Homepage</h1>
-    </section>
-    <main>
-        <section id="tutorials">
-            <h2>Tutorials</h2>
-            <hr style="background-image: linear-gradient(to right , white, black, black, black, black);">
-            <ul>
-                <li><a href="tutorial01/index.html">Tutorial 1</a>: Website with embedded photos, music and video players</li>
-                <li><a href="https://github.com/alfenn/cs130-coursework">Tutorial 2</a>: Remote repository on GitHub</li>
-                <li><a href="tutorial03/index.html">Tutorial 3</a>: Layout practice with CSS grid and media queries</li>
-                <li><a href="https://alfenn.github.io/cs130-coursework/">Tutorial 4</a>: Homepage for CS 130 coursework (this page)</li>
-            </ul>
+    <div class="everything">
+        <section id="homepage-header">
+            <h1>My CS 130 <br>Homepage</h1>
+            <ul style="margin-top: -30px;">
+                Tools and Technology of the World Wide Web, Spring 2021
+            </ul> 
         </section>
-        <section id="homeworks">
-            <h2>Homeworks</h2>
-            <hr style="background-image: linear-gradient(to right , white, black, black, black);">
-            <ul>
-                <li>Homework 1: <a href="https://alfenn.github.io/cs130-coursework/hw01/01_cssgrid/">Spotify player layout</a>, <a href="https://alfenn.github.io/cs130-coursework/hw01/02_flexbox/">flower gallery</a></li>
-            </ul>
-        </section>
-        <section id="inspiration">
-            <h2>Design Inspiration</h2>
-            <hr>
-            <ul>
-                <li><a href="https://www.mouseless.app/notion-keyboard-shortcuts/">Mouseless</a>: keyboard shortcuts for Notion</li>
-            </ul>
-        </section>
-    </main>
+        <main>
+            <section id="tutorials">
+                <h2>Tutorials</h2>
+                <!-- <hr style="background-image: linear-gradient(to right , white, black, black, black, black);"> -->
+                <!-- <hr> -->
+                <ul>
+                    <li><a href="tutorial01/index.html">Tutorial 1</a>: Website with embedded photos, music and video players</li>
+                    <li><a href="https://github.com/alfenn/cs130-coursework">Tutorial 2</a>: Remote repository on GitHub</li>
+                    <li><a href="tutorial03/index.html">Tutorial 3</a>: Layout practice with CSS grid and media queries</li>
+                    <li><a href="https://alfenn.github.io/cs130-coursework/">Tutorial 4</a>: Homepage for CS 130 coursework (this page)</li>
+                </ul>
+            </section>
+            <section id="homeworks">
+                <h2>Homeworks</h2>
+                <!-- <hr style="background-image: linear-gradient(to right , white, black, black, black);"> -->
+                <!-- <hr> -->
+                <ul>
+                    <li>Homework 1: <a href="https://alfenn.github.io/cs130-coursework/hw01/01_cssgrid/">Spotify player layout</a>, <a href="https://alfenn.github.io/cs130-coursework/hw01/02_flexbox/">flower gallery</a></li>
+                </ul>
+            </section>
+            <section id="inspiration">
+                <h2>Design Inspiration</h2>
+                <!-- <hr> -->
+                <ul>
+                    <li><a href="https://www.mouseless.app/notion-keyboard-shortcuts/">Mouseless</a>: keyboard shortcuts for Notion</li>
+                </ul>
+            </section>
+        </main>
+    </div>
+    
 </body>
 
 </html>
