--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <ul>
                     <li><a href="https://www.mouseless.app/notion-keyboard-shortcuts/">Mouseless</a>: keyboard shortcuts for Notion</li>
                     <li><a href="https://discord.com/inspiration">Discord</a>: instant messaging and digital communication platform</li>
-                    <li><a href="https://www.shareviralpositivity.com/">Viral Positivity</a>: an artsy project to uplift our essential workers during the pandemic</li>
+                    <li><a href="https://www.shareviralpositivity.com/">Viral Positivity</a>: an artsy project to uplift our essential workers</li>
                     <li><a href="https://www.inputmag.com/reviews/apple-airtag-review-vs-tile-battery-range-price">Input Magazine</a>: Apple AirTag review</li>
                     <li><a href="https://cli.github.com/">GitHub CLI</a>: bringing GitHub to your command line</li>
                     <li><a href="https://ideas.ted.com/">TED Ideas</a>: an archive of ideas worth spreading</li>
