update homepage with hw02 link

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                 <!-- <hr> -->
                 <ul>
                     <li>Homework 1: <a href="https://alfenn.github.io/cs130-coursework/hw01/01_cssgrid/">Spotify player layout</a>, <a href="https://alfenn.github.io/cs130-coursework/hw01/02_flexbox/">flower gallery</a></li>
+                    <li>Homework 2: <a href="https://alfenn.github.io/cs130-coursework/hw02/">Spotify player with elements</a></li>
                 </ul>
             </section>
             <section id="inspiration">
