fix hw01 scrollbar

--- a/hw01/01_cssgrid/index.html
+++ b/hw01/01_cssgrid/index.html
@@ -12,12 +12,14 @@
             <header>
                 Main > Header
             </header>
-            <nav>
-                Main > Navigation
-            </nav>
-            <section id="featured-content">
-                Main > Featured Content
-            </section>
+            <div class="content">
+                <nav>
+                    Main > Navigation
+                </nav>
+                <section id="featured-content">
+                    Main > Featured Content
+                </section>
+            </div>            
         </main>
         <footer>
             Player
