add tutorial 5 to repo

--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
                 <!-- <hr style="background-image: linear-gradient(to right , white, black, black, black, black);"> -->
                 <!-- <hr> -->
                 <ul>
-                    <li><a href="tutorial01/index.html">Tutorial 1</a>: Website with embedded photos, music and video players</li>
+                    <li><a href="tutorial01/">Tutorial 1</a>: Website with embedded photos, music and video players</li>
                     <li><a href="https://github.com/alfenn/cs130-coursework">Tutorial 2</a>: Remote repository on GitHub</li>
-                    <li><a href="tutorial03/index.html">Tutorial 3</a>: Layout practice with CSS grid and media queries</li>
+                    <li><a href="tutorial03/">Tutorial 3</a>: Layout practice with CSS grid and media queries</li>
                     <li><a href="https://alfenn.github.io/cs130-coursework/">Tutorial 4</a>: Homepage for CS 130 coursework (this page)</li>
+                    <li><a href="tutorial05/">Tutorial 5</a>: Practice with JavaScript DOM manipulation</li>
                 </ul>
             </section>
             <section id="homeworks">
