fix broken tutorial05 link on homepage

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <li><a href="https://github.com/alfenn/cs130-coursework">Tutorial 2</a>: Remote repository on GitHub</li>
                     <li><a href="tutorial03/">Tutorial 3</a>: Layout practice with CSS grid and media queries</li>
                     <li><a href="https://alfenn.github.io/cs130-coursework/">Tutorial 4</a>: Homepage for CS 130 coursework (this page)</li>
-                    <li><a href="tutorial05/">Tutorial 5</a>: Practice with JavaScript DOM manipulation</li>
+                    <li><a href="tutorial05/listing.html">Tutorial 5</a>: Practice with JavaScript DOM manipulation</li>
                 </ul>
             </section>
             <section id="homeworks">
