add hw04 (incomplete) for tutorial 7

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                     <li>Homework 1: <a href="https://alfenn.github.io/cs130-coursework/hw01/01_cssgrid/">Spotify player layout</a>, <a href="https://alfenn.github.io/cs130-coursework/hw01/02_flexbox/">flower gallery</a></li>
                     <li>Homework 2: <a href="https://alfenn.github.io/cs130-coursework/hw02/">Spotify player with elements</a></li>
                     <li>Homework 3: <a href="https://alfenn.github.io/cs130-coursework/hw03/">Photo carousel using JavaScript</a></li>
+                    <li>Homework 4: <a href="https://alfenn.github.io/cs130-coursework/hw04/">Spotify mockup with API integration</a></li>
                 </ul>
             </section>
             <section id="inspiration">
