update homepage with final project

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                     <li>Homework 2: <a href="https://alfenn.github.io/cs130-coursework/hw02/">Spotify player with elements</a></li>
                     <li>Homework 3: <a href="https://alfenn.github.io/cs130-coursework/hw03/">Photo carousel using JavaScript</a></li>
                     <li>Homework 4: <a href="https://alfenn.github.io/cs130-coursework/hw04/your_task/">Spotify mockup with API integration</a></li>
+                    <li>Final project: <a href="https://alfenn.github.io/cs130-coursework/final-project/website/">Safeway vaccine appointment availability tool</a></li>
                 </ul>
             </section>
             <section id="inspiration">
