--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             </section>
         </main>
     </div>
-    
+    <script type="text/javascript" src="script.js"></script>
 </body>
 
 </html>
