update about section

--- a/final-project/website/index.html
+++ b/final-project/website/index.html
@@ -12,11 +12,11 @@
 <body>
     <nav>
         <div>
-            <a href="index.html" id="logo">Vaxualize</a>
+            <a href="https://alfenn.github.io/cs130-coursework/final-project/website/" id="logo">Vaxualize</a>
         </div>
         <div id="not-logo">
             <input type="search" placeholder="Enter zip code" id="search" value>
-            <a href="about.html">About</a>
+            <a href="#" onclick="displayAbout(event)">About</a>
             <a href="https://github.com/alfenn/cs130-coursework/tree/main/final-project">GitHub</a>
         </div>
     </nav>
