fix big: 'no location chosen' msg above chart

--- a/final-project/website/index.html
+++ b/final-project/website/index.html
@@ -26,10 +26,9 @@
     </section>
 
     <section id="location-info">
-        <div id="location-info-not-chart" style="padding: 10px;">
-            <h2>No location chosen</h2>
-        </div>
-        <canvas id="myChart"></canvas>
+        <h2>No location chosen</h2>
+        <!-- javascript should clear everything in #location-info and regenerate the canvas tag -->
+        <!-- <canvas id="myChart"></canvas> -->
     </section>
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
